fls_2019/assets/src/sass/partials/_home.scss
html {
	body {
		&#page-home {
			main {
				padding-top:6.5rem;
				section {
					&#home_banner {
						overflow-y: hidden;
						div {
							&.container, &.container-fluid, &.row, &.col-12 {
								padding-left:0;
								padding-right:0;
							}
							&.row {
								margin-left:0;
								margin-right:0;
							}
							&.carousel {
								div {
									&.carousel-inner {
										div {
											&.carousel-item {
												max-height:650px;
												img {
												    &.brand {
				    									position:absolute;
			    									    z-index: 2;	
													    top: 20%;
													    left: 20%;
													    height: 7rem;
												    }
												    &.background {
													    display: block;
														min-width: 100%;
													    width: fit-content;
												        z-index: 2;										    	
												    }
												}
												h1 {
													position: absolute;
													z-index: 4;
													bottom: 0;
													margin-bottom: 0;
													background-color: $blue;
													color:$white;
													padding: 1.25rem 1.5rem;
												    @media(min-width: 786px){
													    padding:1.25rem 1.5rem 1.25rem 18rem;
												    }
												}
												a {
													position:absolute;
													display: block;
													height:100%;
													width:100%;
												    z-index: 3;
												}
											}
										}
									}
								}
								ol {
									&.carousel-indicators {
										justify-content: flex-end;
										li {
											height: 1rem;
											width: 1rem;
											background-color:$white_trans;
											border:1px solid $white;
											cursor:pointer;
											&.active {
												background-color: $blue;
											}
										}
									}
								}									
							}
						}

					}
					&#home_summary {
						padding-top: 2rem;
						padding-bottom: 0rem;
						p{
							font-size:1.1275rem;
							margin-bottom:1.75rem;
						}
					}
					&#home_industries {
						padding-top:1rem;
						padding-bottom:2rem;
						.title {
							margin-bottom:2rem;
						}
						div {
							&.img_grid {
								div {
									&.item {
										&:first-of-type {
											background-color: $gray;
											div {
												&.caption {
													top:0;
													h2 {
														color: $accent_1;
														font-size: 1.4375rem;
														a {
															color:$black;
															&:hover {
																text-decoration: none;
															}
														}
													}
													span {
														font-size: 1.1875rem;
														line-height: 2.5rem;
														a {
															color:$black;
															&:hover {
																text-decoration: none;
															}
														}
													}
												}
											}
										}
										@media(max-width: 786px) {	
											border-bottom: 5px solid $alternate;
											&:nth-of-type(odd) {
												border-right: 5px solid $alternate;
											}
										}
									}									
								}
							}							
						}
					}
					&#home_testimonials {
						padding-top:2rem;
						padding-bottom:2rem;
						background-color: $gray;
						.carousel-inner {
							margin-top:2rem;
							margin-bottom:2rem;
						}
					}
					&#home_clients {
						div {
							&.item {
								@media(max-width: 786px) {	
									border-bottom: 5px solid $alternate;
									&:nth-of-type(odd) {
										border-right: 5px solid $alternate;
									}
								}								
							}
						}
					}
				}
			}
			footer {
				section {
					&#foot_call_cta {
					    margin-top: 0;
					}					
				}
			}
		}
	}	
}

